2004-08-17  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* tools/depend.mk: Don't generate dependencies for implib target.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* Makefile: Correct dependencies.
	* tools/Makefile: Silence some annoying messages.
	* tools/config.mk: Ditto.
	* rules.mak (MINIMALDEPENDENCIES): New option; minimal dependencies
	(yes/no). If yes, then components do not depend on all import libraries.
	If no, then they do. Defaults to yes.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/user32/include/debug.h (ASSERT): Don't call KeBugCheck.
	* lib/user32/misc/dllmain.c (KeBugCheck): Remove declaration.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* drivers/net/tcpip/include/.cvsignore: New file.
	* drivers/net/tcpip/include/precomp.h: New file.
	* drivers/net/tcpip/Makefile (TARGET_PCH): Set to include/precomp.h.
	* drivers/net/tcpip/tests/Makefile (TARGET_PCH): Reset.
	* drivers/net/tcpip/*/*.c: Use pre-compiled header.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* drivers/net/ndis/include/.cvsignore: New file.
	* drivers/net/ndis/.cvsignore: Add *.d.
	* drivers/net/ndis/Makefile (TARGET_PCH): Set to include/ndissys.h.
	* drivers/net/ndis/*.c: Use pre-compiled header.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* drivers/net/afd/include/.cvsignore: New file.
	* drivers/net/afd/include/tdiconn.h: Don't include <afd.h>.
	* drivers/net/afd/.cvsignore: Add *.d.
	* drivers/net/afd/makefile (TARGET_PCH): Set to include/afd.h.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* subsys/system/taskmgr/.cvsignore: Add *.gch.
	* subsys/system/taskmgr/precomp.h: New file.
	* subsys/system/taskmgr/makefile (TARGET_PCH): Set to precomp.h.
	* subsys/system/taskmgr/*.c: Use pre-compiled header.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* subsys/system/usetup/.cvsignore: Add *.gch.